some updation on the project

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "maja",
   "version": "0.1.0",
-  "homepage":"https://ni774.github.io",
+  "homepage":"",
   "private": true,
   "dependencies": {
     "react": "^16.8.0-alpha.1",
